force-app/main/default/objects/Blog__c/Blog__c.object-meta.xml
<CustomObject>
    <label>Blog</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Blog Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>