force-app/main/default/objects/Blog__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tech</fullName>
            </value>
            <value>
                <fullName>Lifestyle</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>