force-app/main/default/objects/Blog__c/fields/Cover_Image__c.field-meta.xml
<CustomField>
    <fullName>Cover_Image__c</fullName>
    <label>Cover Image</label>
    <type>Url</type>
</CustomField>